@@ -2,6 +2,7 @@
 #define _FDLEAK_H_
 
 #include <stdlib.h>
+#include <unistd.h>
 #include <stdio.h>
 
 #define DO(op) \
@@ -23,6 +24,15 @@
  * - For Ubuntu 8.04, see also
  *   https://bugs.launchpad.net/ubuntu/+source/seahorse/+bug/235184
  */
-#define CLOSE_INHERITED_FDS { int i; for (i = 3; i < 64; i++) close(i); }
+static inline void close_inherited () {
+   int i; int max_fds = sysconf (_SC_OPEN_MAX);
+   if (max_fds < 0)
+      max_fds = 1024; /* Fallback if sysconf fails, returns -1.  */
+
+   /* Only leave 0 (stdin), 1 (stdout) and 2 (stderr) open.  */
+   for (i = 3; i < max_fds; i++)
+      close(i);
+}
+#define CLOSE_INHERITED_FDS close_inherited ()
 
 #endif /* _FDLEAK_H_ */
